Removed the use of deprecated Integer/Long constructors and removed some explicit conversions that are not required
[git-p4: depot-paths = "//dev/main.cpp/": change = 94808]