@@ -1,8 +1,8 @@
 /*
- * Copyright (c) 2000, 2020, Oracle and/or its affiliates.
+ * Copyright (c) 2000, 2022, Oracle and/or its affiliates.
  *
  * Licensed under the Universal Permissive License v 1.0 as shown at
- * http://oss.oracle.com/licenses/upl.
+ * https://oss.oracle.com/licenses/upl.
  */
 package coherence.tests;
 
@@ -59,7 +59,7 @@ public class IncrementorInvocable
     */
     public Object getResult()
         {
-        return new Integer(m_nResult);
+        return Integer.valueOf(m_nResult);
         }
 
 
