@@ -1,8 +1,8 @@
 /*
- * Copyright (c) 2000, 2020, Oracle and/or its affiliates.
+ * Copyright (c) 2000, 2022, Oracle and/or its affiliates.
  *
  * Licensed under the Universal Permissive License v 1.0 as shown at
- * http://oss.oracle.com/licenses/upl.
+ * https://oss.oracle.com/licenses/upl.
  */
 package coherence.tests;
 
@@ -29,17 +29,17 @@ public class OrderKey
         this.m_id = id;
         }
 
-	public Object getAssociatedKey()
-		{
-		return new Integer(m_id);
-		}
+    public Object getAssociatedKey()
+        {
+        return Integer.valueOf(m_id);
+        }
 
     // ----- PortableObject interface ---------------------------------------
 
     public void readExternal(PofReader reader)
             throws IOException
         {
-        m_id        = reader.readInt(0);
+        m_id = reader.readInt(0);
         }
 
     public void writeExternal(PofWriter writer)
@@ -63,5 +63,5 @@ public class OrderKey
 
     // ----- data members ---------------------------------------------------
 
-	private int m_id;
+    private int m_id;
     }
